tests/parsing/smtlib/mcil/errors/247_check-system_bad_attribute_2.mcil
(check-system sys :input () :trans)